--- a/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
+﻿@using System.Globalization
+@using Microsoft.AspNetCore.Mvc.Localization
 @using System.IO
 
 @model Quintessence.QCandidate.Models.MemoProgramComponents.MemoProgramComponent
@@ -36,16 +37,13 @@
 
             <!-- Nieuwe inleiding -->
             <div class="block-new">
-                <h2>Situering</h2>
-                <p>Het is maandag 16 april, 9 uur. U treedt vandaag in functie als teamleider productie. U bent nog niet in de mogelijkheid geweest om kennis te maken met uw collega’s. </p>
-
-                <p>Uw voorganger, Christian Melssen, heeft elders een betrekking opgenomen en is sneller moeten vertrekken dan in eerste instantie was vooropgesteld. Hij kan u dus niet begeleiden tijdens de eerste dagen in uw nieuwe functie. </p>
+                @Html.Raw(Model.Intro)
             </div>
 
-            <h2>Situering</h2>
+            @*<h2>Situering</h2>
             <p>Het is maandag 16 april, 9 uur. U treedt vandaag in functie als teamleider productie. U bent nog niet in de mogelijkheid geweest om kennis te maken met uw collega’s. </p>
 
-            <p>Uw voorganger, Christian Melssen, heeft elders een betrekking opgenomen en is sneller moeten vertrekken dan in eerste instantie was vooropgesteld. Hij kan u dus niet begeleiden tijdens de eerste dagen in uw nieuwe functie. </p>
+            <p>Uw voorganger, Christian Melssen, heeft elders een betrekking opgenomen en is sneller moeten vertrekken dan in eerste instantie was vooropgesteld. Hij kan u dus niet begeleiden tijdens de eerste dagen in uw nieuwe functie. </p>*@
         </div>
 
         <!-- Functieomschrijving -->
@@ -53,7 +51,9 @@
             @Html.Raw(Model.FunctionDescription)
         </div>
         <div id="context" class="col s12">
-            <iframe id="pdfFrame" src="pdf/info.pdf#toolbar=0&navpanes=0" width="100%" height="600px"></iframe>
+            
+            <iframe id="pdfFrame" src="@string.Concat(Model.Context, "#toolbar=0&navpanes=0")" width="100%" height="600px"></iframe>
+            @*<iframe id="pdfFrame" src="pdf/info.pdf#toolbar=0&navpanes=0" width="100%" height="600px"></iframe>*@
         </div>
         <div id="memos" class="col s12">
             <div class="row">
@@ -61,32 +61,62 @@
                     <h2>Memos</h2>
                     <div id="simple-list" class="row">
                         <div id="memo-list" class="list-group col">
-                            <div class="list-group-item active" onclick="openMemo(event, 'memo1')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">Maandelijkse vergadering</span> <i class="material-icons">chevron_right</i></div>
-                            <div class="list-group-item" onclick="openMemo(event, 'memo2')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">Ons team</span> <i class="material-icons">chevron_right</i></div>
-                            <div class="list-group-item" onclick="openMemo(event, 'memo3')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">Personeelsadministratie</span> <i class="material-icons">chevron_right</i></div>
-                            <div class="list-group-item" onclick="openMemo(event, 'memo4')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">Kwaliteitsaudit</span> <i class="material-icons">chevron_right</i></div>
-                            <div class="list-group-item-new" onclick="openMemo(event, 'memo5')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">Opleiding Offidi Installateur</span> <i class="material-icons">chevron_right</i></div>
-                            <div class="list-group-item-new" onclick="openMemo(event, 'memo6')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">Netheid &amp; veiligheid</span> <i class="material-icons">chevron_right</i></div>
+                            @foreach (var item in Model.Memos.OrderBy(x => x.Position))
+                            {
+                                if (item.Position == 1)
+                                {
+                                    <div class="list-group-item active" onclick="openMemo(event, @item.OriginId)"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">@item.Title</span> <i class="material-icons">chevron_right</i></div>
+                                }
+                                else
+                                {
+                                    <div class="list-group-item" onclick="openMemo(event, @item.OriginId)"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">@item.Title</span> <i class="material-icons">chevron_right</i></div>
+                                }
+
+                            }
+                            @*<div class="list-group-item active" onclick="openMemo(event, 'memo1')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">Maandelijkse vergadering</span> <i class="material-icons">chevron_right</i></div>
+        <div class="list-group-item" onclick="openMemo(event, 'memo2')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">Ons team</span> <i class="material-icons">chevron_right</i></div>
+        <div class="list-group-item" onclick="openMemo(event, 'memo3')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">Personeelsadministratie</span> <i class="material-icons">chevron_right</i></div>
+        <div class="list-group-item" onclick="openMemo(event, 'memo4')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">Kwaliteitsaudit</span> <i class="material-icons">chevron_right</i></div>
+        <div class="list-group-item-new" onclick="openMemo(event, 'memo5')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">Opleiding Offidi Installateur</span> <i class="material-icons">chevron_right</i></div>
+        <div class="list-group-item-new" onclick="openMemo(event, 'memo6')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">Netheid &amp; veiligheid</span> <i class="material-icons">chevron_right</i></div>*@
                         </div>
                     </div>
                 </div>
                 <div id="memos" class="col s9 memo-wrapper">
-                    <div id="memo1" class="memo active"><img src="img/1_nl.png" /></div>
-                    <div id="memo2" class="memo"><img src="img/2_nl.png" /></div>
-                    <div id="memo3" class="memo"><img src="img/3_nl.png" /></div>
-                    <div id="memo4" class="memo"><img src="img/4_nl.png" /></div>
-                    <div id="memo5" class="memo"><img src="img/5_nl.png" /></div>
-                    <div id="memo6" class="memo"><img src="img/6_nl.png" /></div>
+
+                    @foreach (var item in Model.Memos.OrderBy(x => x.Position))
+                    {
+                        if (item.Position == 1)
+                        {
+                            <div id="@item.OriginId" class="memo active"> @Html.Raw(item.FilePath) </div>
+                        }
+                        else
+                        {
+                            <div id="@item.OriginId" class="memo"> @Html.Raw(item.FilePath) </div>
+                        }
+
+                    }
+                    @*<div id="memo1" class="memo active"><img src="img/1_nl.png" /></div>
+        <div id="memo2" class="memo"><img src="img/2_nl.png" /></div>
+        <div id="memo3" class="memo"><img src="img/3_nl.png" /></div>
+        <div id="memo4" class="memo"><img src="img/4_nl.png" /></div>
+        <div id="memo5" class="memo"><img src="img/5_nl.png" /></div>
+        <div id="memo6" class="memo"><img src="img/6_nl.png" /></div>*@
                 </div>
             </div>
         </div>
         <div id="agenda" class="col s12">
             <h2>Agenda</h2>
             <div class="calendar">
-                <div class="calendar-block">
-                    <div class="calendar-date">Maandag 2 april</div><textarea class="calendar-text"></textarea>
-                </div>
-                <div class="calendar-block">
+                @foreach (var item in Model.CalendarDays.OrderBy(x => x.Day))
+                {
+                    var culture = new CultureInfo("nl");
+                    <div class="calendar-block">
+                        <div class="calendar-date">@item.Day.ToString("D", culture)</div><textarea class="calendar-text"></textarea>
+                    </div>
+                }
+
+                @*<div class="calendar-block">
                     <div class="calendar-date">Dinsdag 3 april</div><textarea class="calendar-text"></textarea>
                 </div>
                 <div class="calendar-block">
@@ -153,7 +183,7 @@
 
                 <div class="calendar-block">
                     <div class="calendar-date">Maandag 30 april</div><textarea class="calendar-text"></textarea>
-                </div>
+                </div>*@
             </div>
         </div>
     </div>
@@ -164,7 +194,6 @@
     <script src="~/js/Sortable.js"></script>
 
     <script>
-
         var el = document.getElementsByClassName("tabs")[0];
         var instance = M.Tabs.init(el);
 
