--- a/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
@@ -65,11 +65,11 @@
                             {
                                 if (item.Position == 1)
                                 {
-                                    <div class="list-group-item active" onclick="openMemo(event, @item.OriginId)"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">@item.Title</span> <i class="material-icons">chevron_right</i></div>
+                                    <div class="list-group-item active" onclick="openMemo(event, '@item.OriginId')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">@item.Title</span> <i class="material-icons">chevron_right</i></div>
                                 }
                                 else
                                 {
-                                    <div class="list-group-item" onclick="openMemo(event, @item.OriginId)"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">@item.Title</span> <i class="material-icons">chevron_right</i></div>
+                                    <div class="list-group-item" onclick="openMemo(event, '@item.OriginId')"> <span class="drag-icon"><i class="material-icons">drag_handle</i></span> <span class="truncate">@item.Title</span> <i class="material-icons">chevron_right</i></div>
                                 }
 
                             }
@@ -189,40 +189,11 @@
     </div>
 </div>
 
+<div id="memoTest">Test Memo</div>
+
 @section Scripts {
 
     <script src="~/js/Sortable.js"></script>
+    <script src="~/js/memoProgramComponent.js" type="text/javascript"></script>
 
-    <script>
-        var el = document.getElementsByClassName("tabs")[0];
-        var instance = M.Tabs.init(el);
-
-        var memos = document.getElementById('memo-list');
-
-        // Example 1 - Simple list
-        new Sortable(memos, {
-            animation: 150,
-            ghostClass: 'ghost-background-class'
-        });
-
-        function openMemo(evt, memoName) {
-            var i, tabcontent, tablinks;
-            tabcontent = document.getElementsByClassName("memo");
-            for (i = 0; i < tabcontent.length; i++) {
-                tabcontent[i].style.display = "none";
-            }
-            tablinks = document.getElementsByClassName("list-group-item");
-            for (i = 0; i < tablinks.length; i++) {
-                tablinks[i].className = tablinks[i].className.replace(" active", "");
-            }
-
-            tablinks = document.getElementsByClassName("list-group-item-new");
-            for (i = 0; i < tablinks.length; i++) {
-                tablinks[i].className = tablinks[i].className.replace(" active", "");
-            }
-
-            document.getElementById(memoName).style.display = "block";
-            evt.currentTarget.className += " active";
-        }
-    </script>
 }
