--- a/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
@@ -36,14 +36,11 @@
         <div id="inleiding" class="col s12">
 
             <!-- Nieuwe inleiding -->
-            <div class="block-new">
+            @*<div class="block-new"></div>*@
+            <div >
                 @Html.Raw(Model.Intro)
             </div>
-
-            @*<h2>Situering</h2>
-            <p>Het is maandag 16 april, 9 uur. U treedt vandaag in functie als teamleider productie. U bent nog niet in de mogelijkheid geweest om kennis te maken met uw collega’s. </p>
-
-            <p>Uw voorganger, Christian Melssen, heeft elders een betrekking opgenomen en is sneller moeten vertrekken dan in eerste instantie was vooropgesteld. Hij kan u dus niet begeleiden tijdens de eerste dagen in uw nieuwe functie. </p>*@
+           
         </div>
 
         <!-- Functieomschrijving -->
@@ -51,7 +48,6 @@
             @Html.Raw(Model.FunctionDescription)
         </div>
         <div id="context" class="col s12">
-            
             <iframe id="pdfFrame" src="@string.Concat(Model.Context, "#toolbar=0&navpanes=0")" width="100%" height="600px"></iframe>
             @*<iframe id="pdfFrame" src="pdf/info.pdf#toolbar=0&navpanes=0" width="100%" height="600px"></iframe>*@
         </div>
