--- a/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="context">
         <a href="index.html" class="btn">Onderdeel afsluiten</a>
-        <h1>Assessment</h1>
+        <h1>@Html.DisplayFor(m => Model.Name)</h1>
     </div>
 </div>
 
