Fixed PR comments

--- a/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
@@ -67,7 +67,7 @@
                                         divClassNames.Add("active");
                                     }
 
-                                    <div class="@string.Join(' ', divClassNames.ToArray())" onclick="openMemo(event, '@memo.Id')" id="@memo.Id">
+                                    <div id="@memo.Id" class="@string.Join(' ', divClassNames.ToArray())" onclick="openMemo(event, '@memo.Id')" >
                                         <span class="drag-icon">
                                             <i class="material-icons">
                                                 drag_handle
@@ -136,45 +136,4 @@ else
     <script src="~/js/Sortable.js"></script>
     <script src="~/js/memoProgramComponent.js" type="text/javascript"></script>
 
-    <script>
-        var el = document.getElementsByClassName("tabs")[0];
-        var instance = M.Tabs.init(el);
-
-
-        var memos = document.getElementById('memo-list');
-
-        // Example 1 - Simple list
-        new Sortable(memos,
-            {
-                animation: 150,
-                ghostClass: 'ghost-background-class',
-                onSort: function (/**Event*/ evt) {
-                    saveMemos();
-                },                    
-            });
-
-        function openMemo(evt, memoName) {
-            var i, tabcontent, tablinks;
-            tabcontent = document.getElementsByClassName("memo");
-            for (i = 0; i < tabcontent.length; i++) {
-                tabcontent[i].style.display = "none";
-            }
-            tablinks = document.getElementsByClassName("list-group-item");
-            for (i = 0; i < tablinks.length; i++) {
-                tablinks[i].className = tablinks[i].className.replace(" active", "");
-            }
-
-            tablinks = document.getElementsByClassName("list-group-item-new");
-            for (i = 0; i < tablinks.length; i++) {
-                tablinks[i].className = tablinks[i].className.replace(" active", "");
-            }
-
-            document.getElementById(memoName).style.display = "block";
-            evt.currentTarget.className += " active";
-        };
-
-
-
-
-    </script>
 }
