Optional link to another SimulationCombination
Related Work Items: #7912

--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Admin/Views/AdminSimulation/EditSimulationMatrixEntry.cshtml
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Admin/Views/AdminSimulation/EditSimulationMatrixEntry.cshtml
@@ -32,6 +32,7 @@
             $('#@Html.IdFor(m => m.SimulationLevelId)').combobox();
             $('#@Html.IdFor(m => m.SimulationId)').combobox();
             $('#@Html.IdFor(m => m.QCandidateLayoutId)').combobox();
+            
 
         });
 
@@ -129,6 +130,13 @@
         </div>
         <div class="grid_7 table">
             <div class="value">@Html.DropDownListFor(m => m.QCandidateLayoutId, Model.QCandidateLayouts)</div>
+        </div>
+        <div class="clear"></div>
+        <div class="grid_5 table">
+            <div class="label">@Html.LabelFor(m => m.PredecessorId)</div>
+        </div>
+        <div class="grid_7 table">
+            <div class="value">@Html.EditorFor(m => m.PredecessorId)</div>
         </div>
         <div class="clear"></div>
 
