--- a/src/Hosts/Quintessence.QCandidate.Web/wwwroot/css/memoprogramcomponentdetails.css
+++ b/src/Hosts/Quintessence.QCandidate.Web/wwwroot/css/memoprogramcomponentdetails.css
@@ -83,6 +83,11 @@
       margin-bottom: 8px;
   }
 
+  .pdf-content {
+      width: 100%;
+      height: 1075px;
+  }
+
   .block-new {
       background-color: #E5EAEF;
       margin: 0px -20px;
