--- a/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/MemoProgramComponents/Details.cshtml
@@ -94,7 +94,7 @@
                             {
                                 classNames.Add("active");
                             }
-                            <div id="@memo.Id" class="@string.Join(' ', classNames.ToArray())"> @Html.Raw(memo.Content) </div>
+                            <div id="@memo.Id" data-memoId="@memo.Id" class="@string.Join(' ', classNames.ToArray())"> @Html.Raw(memo.Content) </div>
                         }
 
                     </div>
